--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ vertical-align: top;
 <tr>
 <td>
 <h3>Ievadprezentācija</h3>
-<a href="slides/lesson0_neklatiene.html" download target="_blank">Lekcija 1</a><br/>
+<a href="slides/lesson0_neklatiene.html" download target="_blank">Prezentācija</a><br/>
 
 <h3>1. HTML</h3>
 <a href="lekc1/Lekcija_1.pdf" download target="_blank">Lekcija 1</a><br/>
