--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@ vertical-align: top;
 <a href="lekc3/Bootstrap.pdf" download target="_blank">Lekcija 3</a><br/>
 <a href="lekc3/Prakt1_Uzd3.html">Prakt 1: Uzdevums 3</a>
 
-<!-- 
-<h3>4. JavsScript I</h3>
-//<a href="lekc3/Lekcija_3.pdf" download target="_blank">Lekcija</a><br/>
-//<a href="lekc3/Web_development3_Bootstrap_2017.pdf" download target="_blank">Bootstrap</a><br/>
-//<a href="lekc3/Praktiskais_darbs_3.html">Praktiskais darbs</a>
+<p>Darbu sagatavojiet jaunā folderī ar nosaukumu "Vārds Uzvārds Prakt1" (aiztājiet ar savu vārdu un uzvārdu).<br/>
+Praktiskā darba folderi arhivējiet zip formātā.<br/>
+Nosūtiet arhīvu uz e-pastu mikelis@va.lv.</p>
 
-<h3>5. JavsScript II</h3>
-//<a href="lekc3/Lekcija_3.pdf" download target="_blank">Lekcija</a><br/>
+<hr/>
+
+<h3>4. JavaScript I</h3>
+<a href="slides/lesson4_unfinished.html" target="_blank">Lekcija 4</a><br/>
+
+<h3>5. JavaScript II</h3>
 <a href="slides/lesson5.html" target="_blank">Lekcija 5</a><br/>
-<a href="lekc5/Praktiskais_darbs_4-5.html">Praktiskais darbs 4-5</a>
+<a href="lekc5/Prakt2_Uzd1.html">Prakt 2: Uzdevums 1</a>
 
 <h3>6. jQuery</h3>
-//<a href="lekc3/Lekcija_3.pdf" download target="_blank">Lekcija</a><br/>
 <a href="slides/lesson6.html" target="_blank">Lekcija 6</a><br/>
-<a href="lekc6/Praktiskais_darbs_6.html">Praktiskais darbs 6</a>
+<a href="lekc6/Prakt2_Uzd2.html">Prakt 2: Uzdevums 2</a>
 
+<!-- 
 <h3>7. PHP I</h3>
 <a href="slides/lesson7.html" target="_blank">Lekcija 7</a><br/>
 <a href="lekc7/Praktiskais_darbs_7.html">Praktiskais darbs 7</a>
@@ -66,9 +68,6 @@ vertical-align: top;
 <a href="lekc9/Praktiskais_darbs_9.html">Praktiskais darbs 9</a>
  -->
 
-<p>Darbu sagatavojiet jaunā folderī ar nosaukumu "Vārds Uzvārds Prakt1" (aiztājiet ar savu vārdu un uzvārdu).<br/>
-Praktiskā darba folderi arhivējiet zip formātā.<br/>
-Nosūtiet arhīvu uz e-pastu mikelis@va.lv.</p>
 
 
 </td>
