Add PHP lessons.

--- a/index.html
+++ b/index.html
@@ -54,21 +54,29 @@ Nosūtiet arhīvu uz e-pastu mikelis@va.lv.</p>
 <a href="slides/lesson6.html" target="_blank">Lekcija 6</a><br/>
 <a href="lekc6/Prakt2_Uzd2.html">Prakt 2: Uzdevums 2</a>
 
-<!-- 
+<p>Darbu sagatavojiet jaunā folderī ar nosaukumu "Vārds Uzvārds Prakt2" (aiztājiet ar savu vārdu un uzvārdu).<br/>
+Praktiskā darba folderi arhivējiet zip formātā.<br/>
+Nosūtiet arhīvu uz e-pastu mikelis@va.lv.</p>
+
+<hr/>
+
 <h3>7. PHP I</h3>
 <a href="slides/lesson7.html" target="_blank">Lekcija 7</a><br/>
-<a href="lekc7/Praktiskais_darbs_7.html">Praktiskais darbs 7</a>
+<a href="lekc7/Prakt3_Uzd1.html">Prakt 3: Uzdevums 1</a>
 
 <h3>8. PHP II</h3>
 <a href="slides/lesson8.html" target="_blank">Lekcija 8</a><br/>
-<a href="lekc8/Praktiskais_darbs_8.html">Praktiskais darbs 8</a>
 
+<!-- 
 <h3>9. PHP III</h3>
-//<a href="slides/lesson8.html" target="_blank">Lekcija 8</a><br/>
-<a href="lekc9/Praktiskais_darbs_9.html">Praktiskais darbs 9</a>
+<a href="slides/lesson9.html" target="_blank">Lekcija 9</a><br/>
  -->
+<a href="lekc9/Prakt3_Uzd2.html">Prakt 3: Uzdevums 2</a><br/>
+<a href="lekc9/Prakt3_Uzd3.html">Prakt 3: Uzdevums 3</a>
 
-
+<p>Darbu sagatavojiet jaunā folderī ar nosaukumu "Vārds Uzvārds Prakt3" (aiztājiet ar savu vārdu un uzvārdu).<br/>
+Praktiskā darba folderi arhivējiet zip formātā.<br/>
+Nosūtiet arhīvu uz e-pastu mikelis@va.lv.</p>
 
 </td>
 
